creative design color plate outline created

--- a/index.html
+++ b/index.html
@@ -8,3 +8,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="container">
+        <div class="box" style="--clr:#fd0564;">
+            <div class="content">
+                <div class="icon"><ion-icon name="color-palette-outline"></ion-icon></div>
+                <div class="text">
+                    <h3>Website Designing</h3>
+                    <p>5 Projects</p>
+                </div>
+            </div>
+        </div>
