creative code slash outline created

--- a/index.html
+++ b/index.html
@@ -18,3 +18,12 @@
                 </div>
             </div>
         </div>
+        <div class="box" style="--clr:#7b00ff;">
+            <div class="content">
+                <div class="icon"><ion-icon name="code-slash-outline"></ion-icon></div>
+                <div class="text">
+                    <h3>Website Development</h3>
+                    <p>3 Projects</p>
+                </div>
+            </div>
+        </div>
