creative design earth outline created

--- a/index.html
+++ b/index.html
@@ -27,3 +27,13 @@
                 </div>
             </div>
         </div>
+        <div class="box" style="--clr:#00eeff;">
+            <div class="content">
+                <div class="icon"><ion-icon name="earth-outline"></ion-icon></div>
+                <div class="text">
+                    <h3>SEO</h3>
+                    <p>12 Projects</p>
+                </div>
+            </div>
+        </div>
+    </div>
